Fix line table overflow

--- a/client/src/app/modules/topo-images/topo-image-list/topo-image-list.component.scss
+++ b/client/src/app/modules/topo-images/topo-image-list/topo-image-list.component.scss
@@ -96,6 +96,8 @@ lc-topo-image-list {
             display: flex;
             justify-content: left;
             align-items: center;
+            hyphens: auto;
+            overflow-wrap: anywhere;
           }
 
           .line-table-info-grade {
